Minor documentation fixes to get PDF output to work
[ci skip]

--- a/tutorials/2-intro-to-brian-synapses.ipynb
+++ b/tutorials/2-intro-to-brian-synapses.ipynb
@@ -46,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -103,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -156,7 +160,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -234,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def visualise_connectivity(S):\n",
@@ -272,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -297,7 +307,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -329,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -354,7 +368,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -379,7 +395,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -430,7 +448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tau_pre = tau_post = 20*ms\n",
@@ -452,24 +472,24 @@
     "\n",
     "We define two new variables $a_{pre}$ and $a_{post}$ which are \"traces\" of pre- and post-synaptic activity, governed by the differential equations:\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "\\tau_{pre}\\frac{\\mathrm{d}}{\\mathrm{d}t} a_{pre} &=& -a_{pre}\\\\\n",
-    "\\tau_{post}\\frac{\\mathrm{d}}{\\mathrm{d}t} a_{post} &=& -a_{post}\\\\\n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align}\n",
+    "\\tau_{pre}\\frac{\\mathrm{d}}{\\mathrm{d}t} a_{pre} &= -a_{pre}\\\\\n",
+    "\\tau_{post}\\frac{\\mathrm{d}}{\\mathrm{d}t} a_{post} &= -a_{post}\\\\\n",
+    "\\end{align}\n",
     "\n",
     "When a presynaptic spike occurs, the presynaptic trace is updated and the weight is modified according to the rule:\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "a_{pre} &\\rightarrow& a_{pre}+A_{pre}\\\\\n",
-    "w &\\rightarrow& w+a_{post}\n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align}\n",
+    "a_{pre} &\\rightarrow a_{pre}+A_{pre}\\\\\n",
+    "w &\\rightarrow w+a_{post}\n",
+    "\\end{align}\n",
     "\n",
     "When a postsynaptic spike occurs:\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
-    "a_{post} &\\rightarrow& a_{post}+A_{post}\\\\\n",
-    "w &\\rightarrow& w+a_{pre}\n",
-    "\\end{eqnarray}$$\n",
+    "\\begin{align}\n",
+    "a_{post} &\\rightarrow a_{post}+A_{post}\\\\\n",
+    "w &\\rightarrow w+a_{pre}\n",
+    "\\end{align}\n",
     "\n",
     "To see that this formulation is equivalent, you just have to check that the equations sum linearly, and consider two cases: what happens if the presynaptic spike occurs before the postsynaptic spike, and vice versa. Try drawing a picture of it.\n",
     "\n",
@@ -479,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -524,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -583,7 +607,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "start_scope()\n",
@@ -653,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.3"
   }
  },
  "nbformat": 4,
